<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CounterActivity" >

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_alignLeft="@+id/back"
        android:text="@string/detail" />

    <Button
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detail"
        android:layout_alignLeft="@+id/detail"
        android:text="@string/rename" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rename"
        android:layout_alignLeft="@+id/rename"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/counterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="20sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/reset"
        android:layout_centerHorizontal="true"
        android:text="@string/add" />

</RelativeLayout>