<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoadActivity" >

   <EditText
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" 
        android:hint="@string/cname"
        android:singleLine="true"
        />

    <ListView
        android:id="@+id/counterName"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/back"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input"
        android:layout_below="@+id/input"
        android:text="@string/submit" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counterName"
        android:layout_below="@+id/submit"
        android:text="@string/cancel" />

</RelativeLayout>
